k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: perf
spec:
  replicas: 1
  selector:
    matchLabels: { app: frontend }
  template:
    metadata:
      labels: { app: frontend }
    spec:
      containers:
        - name: frontend
          image: aksmicroperfacr12507.azurecr.io/frontend:0.1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: perf
spec:
  type: ClusterIP
  selector: { app: frontend }
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
